Revision history for Perl extension Mac::RecentDocuments
                                        Time-stamp: "2000-10-12 16:59:38 MDT"

2000-10-12  Sean M. Burke  sburke@cpan.org

	* Release 0.01 -- Initial release.
